objects/ShipIt_ShipMethod__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>The Custom Setting will contain the list of available Shipping Methods and additional information, including alternate shipping options and other specific requirements.</description>
    <fields>
        <fullName>A1__c</fullName>
        <label>A1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A2__c</fullName>
        <label>A2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A3__c</fullName>
        <label>A3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AA__c</fullName>
        <label>AA</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM__c</fullName>
        <label>AM</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AT__c</fullName>
        <label>AT</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorization_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate when Authorization is required. Applies only to Department billed shipments.</description>
        <label>Authorization Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brown_Box_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for CR-20160104-9486.</description>
        <label>Brown Box Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department_Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate that the shipping method is an allowed method for Department billing.</description>
        <label>Department Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <label>Display Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM__c</fullName>
        <label>PM</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate if the shipping method is available for any type of use – Personal or Department.</description>
        <label>Personal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RM__c</fullName>
        <label>RM</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>ShipIt ShipMethod</label>
</CustomObject>